fix: .taogi-gnb-switch z-index -- 99999999999 => 999

--- a/model/touchcarousel/css/gnb.css
+++ b/model/touchcarousel/css/gnb.css
@@ -87,7 +87,7 @@ body {
 	transition-duration: 0.3s;
 	-webkit-transition-duration: 0.3s;
 	position: absolute;
-	z-index: 999999999999;
+	z-index: 999;
 	*zoom: 1;
 	top: 15px;
 	left: 15px;
